--- a/index.html
+++ b/index.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BLACK&GOLD SKULL</title>
-  <link rel="stylesheet" href="/src/css/style.css">
-</head>
-<body>
-  <div class="container">
-    <section class="section-one">
-      <nav>
-      <div class="logo"><img src="/src/asset/img/BLACK GOLD SKULL.png" alt="logo"></div>
-
-        <ul>
-          <li><a href="https://opensea.io/collection/blackngoldskull" target="blank">buy</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">contact</a></li>
-        </ul>
-      </nav>
-      <button class="btn-discover">discover</button>
-
-    </section>
-  </div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>BLACK&GOLD SKULL</title>
+        <link rel="stylesheet" href="/src/css/style.css">
+    </head>
+    <body>
+        <div class="container">
+            <section>
+                <nav>
+                    <div class="logo">
+                        <img src="/src/asset/img/BLACK GOLD SKULL.png" alt="logo">
+                    </div>
+                    <ul>
+                        <li>
+                            <a href="https://opensea.io/collection/blackngoldskull" target="blank">buy</a>
+                        </li>
+                        <li>
+                            <a href="#">about</a>
+                        </li>
+                        <li>
+                            <a href="#">contact</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div id="myModal" class="modal">
+                    <div class="modal-content">
+                        <!-- <span class="close">&times;</span> -->
+                        <p>Unleash the darkness with our bone-chilling Skull Character NFT Collection. Each unique character embodies the macabre spirit, crafted with intricate details and haunting features that resemble the skeletal remains of the undead. These digital collectibles are guaranteed to send shivers down your spine and add a touch of terror to your collection. Get your hands on one today and let the skull crew haunt your virtual world.</p>
+                        <br>
+                        <p id="BG-creation">BLACK&GOLD SKULL collection Created by B4D.</p>
+                    </div>
+                </div>
+                <footer>
+                    <div class="container-logo">
+                        <a href="https://opensea.io/fr/collection/blackngoldskull" target="_blank">
+                            <img src="/src/asset/img/logo/OpenSea logo.png" alt="opensea logo">
+                        </a>
+                        <a href="https://twitter.com/Stuf_fNightmare" target="_blank">
+                            <img src="/src/asset/img/logo/Twitter logo.png" alt="twitter logo">
+                        </a>
+                        <img id="myBtn" src="/src/asset/img/logo/skull logo.png" alt="skull logo">
+                    </div>
+                </footer>
+            </section>
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+        </div>
+        <script src="/src/js/app.js"></script>
+    </body>
 </html>
