path github test

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BLACK&GOLD SKULL</title>
-        <link rel="stylesheet" href="/src/css/style.css">
+        <link rel="stylesheet" href="src\css\style.css"> 
     </head>
     <body>
         <div class="container">
@@ -28,7 +28,6 @@
                 </nav>
                 <div id="myModal" class="modal">
                     <div class="modal-content">
-                        <!-- <span class="close">&times;</span> -->
                         <p>Unleash the darkness with our bone-chilling Skull Character NFT Collection. Each unique character embodies the macabre spirit, crafted with intricate details and haunting features that resemble the skeletal remains of the undead. These digital collectibles are guaranteed to send shivers down your spine and add a touch of terror to your collection. Get your hands on one today and let the skull crew haunt your virtual world.</p>
                         <br>
                         <p id="BG-creation">BLACK&GOLD SKULL collection Created by B4D.</p>
