--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                 <footer>
                     <div class="container-logo">
                         <a href="https://opensea.io/fr/collection/blackngoldskull" target="_blank">
-                            <img src="/src/asset/img/logo/OpenSea logo.png" alt="opensea logo">
+                            <img src="src\asset\img\logo\OpenSea logo.png" alt="opensea logo">
                         </a>
                         <a href="https://twitter.com/Stuf_fNightmare" target="_blank">
-                            <img src="/src/asset/img/logo/Twitter logo.png" alt="twitter logo">
+                            <img src="src\asset\img\logo\Twitter logo.png" alt="twitter logo">
                         </a>
-                        <img id="myBtn" src="/src/asset/img/logo/skull logo.png" alt="skull logo">
+                        <img id="myBtn" src="src\asset\img\logo\skull logo.png" alt="skull logo">
                     </div>
                 </footer>
             </section>
@@ -51,6 +51,6 @@
             <section></section>
             <section></section>
         </div>
-        <script src="/src/js/app.js"></script>
+        <script src="src\js\app.js"></script>
     </body>
 </html>
